# lime

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  LICENSE  README.md  TaskList.md  annotated.html  array2d_8h_source.html  array2d__detail_8h_source.html  classes.html  classlime_1_1_array2d-members.html  classlime_1_1_array2d.html  classlime_1_1_grid-members.html  classlime_1_1_grid.html  classlime_1_1_point__.html  classlime_1_1_point___3_01_t_00_01is__arith__t_3_01_t_01_4_01_4-members.html  classlime_1_1_point___3_01_t_00_01is__arith__t_3_01_t_01_4_01_4.html  classlime_1_1_random-members.html  classlime_1_1_random.html  classlime_1_1npr_1_1_singular_point-members.html  classlime_1_1npr_1_1_singular_point.html  classlime_1_1npr_1_1_tensor-members.html  classlime_1_1npr_1_1_tensor.html  classlime_1_1random__queue-members.html  classlime_1_1random__queue.html  color__constancy_8h_source.html  color__constancy__detail_8h_source.html  common_8hpp_source.html  cpplint.cfg  cpplint.sh  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_38b7801ee1a47431fc57468d872da51a.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e2b699e31e65cfd3a99278129de7c335.html  dir_f84804d282e856a3a7520c9b0540dbc7.html  environment.yml  (+38 more)
_sources/: index.rst.txt  index.txt  install.txt
_sources/reference/: core.rst.txt  index.txt
_static/: basic.css  doctools.js  documentation_options.js  jquery.js  scrolls.css  searchtools.js  traditional.css
_static/css/: badge_only.css  theme.css
_static/js/: theme.js
cmake/: FindGTest.cmake  LimeConfig.cmake.in  LimeConfigVersion.cmake.in  Macros.cmake
docs/: FRONT_PAGE.md  Makefile  deploy_docs.sh  doxyfile  make.bat  sphinxrenderer.py.patch
docs/css/: custom_style.css
docs/js/: enable_bstrap.js
docs/source/: conf.py  install.rst
docs/source/reference/: misc.rst  npr.rst
docs/template/: footer.html  header.html
examples/: CMakeLists.txt
examples/CCExample/: CMakeLists.txt  cc_examples.cpp
examples/FlowFieldDesign/: CMakeLists.txt  FlowFieldDesign.cpp
examples/ImagingVectorField/: CMakeLists.txt  ImagingVectorField.cpp
examples/NPRFilterDemo/: CMakeLists.txt  NPRFilterDemo.cpp
examples/PencilDrawing/: CMakeLists.txt  PencilDrawing.cpp  main.cpp  mathUtils.h
examples/PerlinNoise/: CMakeLists.txt  PerlinNoise.cpp
examples/cc_example/: CMakeLists.txt  cc_examples.cpp
examples/color_constancy/: color_constancy.cpp
examples/cpp/: CMakeLists.txt
examples/cpp/color_constancy/: color_constancy.cpp
examples/cpp/colormap/: colormap.cpp
examples/cpp/flow_field_design/: flow_field_design.cpp
examples/cpp/npr_filters/: npr_filters.cpp
examples/cpp/pencil_drawing/: main.cpp  math_utils.h  pencil_drawing.cpp  pencil_drawing.h
examples/cpp/perlin_noise/: perlin_noise.cpp
examples/cpp/vector_field_imaging/: vector_field_imaging.cpp
examples/flow_field_design/: CMakeLists.txt  flow_field_design.cpp
examples/npr_filter_demo/: CMakeLists.txt  npr_filter_demo.cpp
examples/npr_filters/: npr_filters.cpp
examples/pencil_drawing/: CMakeLists.txt  main.cpp  math_utils.h  pencil_drawing.cpp  pencil_drawing.h
examples/perlin_noise/: CMakeLists.txt  perlin_noise.cpp
examples/python/: demo_color_constancy.py  demo_npr_filters.py
examples/vector_field_imaging/: CMakeLists.txt  vector_field_imaging.cpp
include/: lime.hpp
reference/: core.html  index.html  misc.html  npr.html
sources/: CMakeLists.txt  lime.cpp  lime.hpp
sources/core/: Array2d_detail.h  CMakeLists.txt  Random.h  array2d.h  array2d_detail.h  colormap.h  common.h  common.hpp  core.cpp  core.hpp  grid.hpp  lime_core.hpp  point.h  point.hpp  random.h  random_detail.h  random_queue.h  random_queue_detail.h  version.h.in
sources/hvs/: CMakeLists.txt  color_constancy.h  color_constancy_detail.h
sources/inpaint/: CMakeLists.txt
sources/metrics/: basics.h  basics_detail.h
sources/misc/: color_constancy.h  color_constancy_detail.h  misc.cpp  misc.hpp
sources/npr/: CMakeLists.txt  NPRFilter_Kuwahara_detail.h  VectorField.h  kuwahara.h  kuwahara_detail.h  lic.h  lic_detail.h  lime_npr.hpp  morphology.h  morphology_detail.h  noise.h  noise_detail.h  npr.cpp  npr.hpp  npr_edges.h  npr_edges_detail.h  npr_filter_kuwahara_detail.h  npr_filter_pdebased_detail.h  npr_filters.h  pdefilter.h  pdefilter_detail.h  poisson_disk.h  poisson_disk_detail.h  singularity.hpp  tensor.hpp  vector_field.h  vector_field_detail.h
sources/python/: CMakeLists.txt  lime.cpp  metrics.cpp  misc.cpp  npr.cpp  pylime.cpp  pylime.h  pyutils.h
src/core/: Array2d.h  Array2d_detail.h  Grid.hpp  Point.hpp  Random.h  Random_detail.h  common.hpp  lime_core.hpp  random_queue.h  random_queue_detail.h
src/hvs/: color_constancy.h  color_constancy_detail.h  lime_hvs.hpp
src/npr/: NPREdges.h  NPREdges_detail.h  NPRFilter_Kuwahara_detail.h  NPRFilter_Morphology_detail.h  NPRFilter_PDEBased_detail.h  NPRFilters.h  Noise.h  Noise_detail.h  PoissonDisk.h  PoissonDisk_detail.h  Singularity.hpp  Tensor.hpp  VectorField.h  VectorField_detail.h  lic.h  lic_detail.h  lime_npr.hpp
tests/: CMakeLists.txt  lime_test.h.in
tests/core/: CMakeLists.txt  test_array2d.cpp  test_core.cpp  test_grid.cpp  test_point.cpp  test_random.cpp  test_random_queue.cpp
tests/metrics/: test_basics.cpp
